[package]
name = "canadian-mortgage"
version = "0.1.0"
authors = ["mlbright"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.38"
thiserror = "1.0.23"
num = "0.3.1"
num-traits = "0.2.14"
rust_decimal = "1.10.1"
rust_decimal_macros = "1.10.1"

[lib]
name = "canadian_mortgage"
path = "src/lib.rs"